tests/ui/feature-gates/doc-rust-logo.rs
#![doc(rust_logo)]
//~^ ERROR the `#[doc(rust_logo)]` attribute is used for Rust branding
//! This is not an official rust crate

fn main() {}
